Updates to Full-Width Page banner to fix issue with long banner text; fixed left, right, center, and non-aligned image spacing

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -5957,6 +5957,35 @@ figure.half-image-left-full {
     padding-left: 305px;
     padding-right: 0; }
 
+figure.align-right,
+figure.align-left,
+figure.align-center,
+figure.embedded-entity {
+  margin: 40px;
+  margin-top: 0;
+  margin-bottom: 32px;
+  display: table; }
+  figure.align-right figcaption,
+  figure.align-left figcaption,
+  figure.align-center figcaption,
+  figure.embedded-entity figcaption {
+    display: table-caption;
+    caption-side: bottom; }
+
+figure.align-right {
+  margin-right: 0; }
+
+figure.align-left {
+  margin-left: 0; }
+
+figure.align-center,
+figure.embedded-entity {
+  margin-left: 0;
+  margin-right: 0; }
+
+figure figure.embedded-entity {
+  margin: 0; }
+
 .video.article-full-width {
   grid-column: 3 / -3;
   margin: 0; }
@@ -6692,7 +6721,11 @@ figure.align-center figcaption {
     grid-column: 8/-1;
     grid-row: 1/-1;
     -ms-grid-column-align: end;
-        justify-self: end; }
+        justify-self: end;
+    background: #fff; }
+  .full-width-page-banner .field-banner-description p {
+    margin: 2rem 0;
+    margin-top: 0; }
 
 .full-width-page-banner__header {
   -ms-grid-column: 1;
