--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -229,6 +229,39 @@ figure.half-image-left-full {
   }
 }
 
+figure.align-right,
+figure.align-left,
+figure.align-center,
+figure.embedded-entity {
+  margin: $space-five;
+  margin-top: 0;
+  margin-bottom: $space-quadruple;
+  display:table;
+
+  figcaption {
+    display:table-caption;
+    caption-side:bottom;
+  }
+}
+
+figure.align-right {
+  margin-right: 0;
+}
+
+figure.align-left {
+  margin-left: 0;
+}
+
+figure.align-center,
+figure.embedded-entity {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+figure figure.embedded-entity {
+  margin: 0; 
+}
+
 .video.article-full-width {
   grid-column: 3 / -3;
   margin: 0;
